unpackaged/main/default/objects/Opportunity/fields/Account_Manager_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Addendum__c</fullName>
    <label>Original Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>