unpackaged/main/default/objects/Opportunity/fields/Account_New_Sales_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Account_New_Sales_Opportunities__c</fullName>
    <formula>Account.New_Sales_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account New Sales Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>