unpackaged/main/default/objects/Opportunity/fields/Account_Strategist__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Strategist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>