unpackaged/main/default/objects/Opportunity/fields/Ad_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Ad_Management_Fee__c</fullName>
    <label>Ad Management Fee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>