unpackaged/main/default/objects/Opportunity/fields/Ad_Management_Fee_Difference__c.field-meta.xml
<CustomField>
    <fullName>Ad_Management_Fee_Difference__c</fullName>
    <formula>IF( Record_Type_Name__c = &quot;Reduce Service&quot;,
(Ad_Management_Fee__c  *- 1),  Ad_Management_Fee__c  -  Current_Ad_Management_Fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Management Fee Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>