unpackaged/main/default/objects/Opportunity/fields/Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Ad_Spend__c</fullName>
    <label>Ad Spend</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>