unpackaged/main/default/objects/Opportunity/fields/Ad_Spend_Difference__c.field-meta.xml
<CustomField>
    <fullName>Ad_Spend_Difference__c</fullName>
    <formula>IF( Record_Type_Name__c = &quot;Reduce Service&quot;,
(Ad_Spend__c *- 1), Ad_Spend__c  -  Current_Ad_Spend__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Spend Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>