unpackaged/main/default/objects/Opportunity/fields/Ad_Spend_Product__c.field-meta.xml
<CustomField>
    <fullName>Ad_Spend_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Spend Product</label>
    <type>Checkbox</type>
</CustomField>