unpackaged/main/default/objects/Opportunity/fields/Add_on_Amount__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Amount__c</fullName>
    <label>Add-on Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Bundle_Product__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.AddOn_RollUp_Category__c</field>
        <operation>notEqual</operation>
        <value>One Time Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>