unpackaged/main/default/objects/Opportunity/fields/Add_or_Subtract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Add_or_Subtract_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Addendum_Type__c , &quot;Expansion&quot;), 1,
   IF(ISPICKVAL(Addendum_Type__c , &quot;Churn&quot;), -1,
      IF(ISPICKVAL(Addendum_Type__c , &quot;Advanced Payment&quot;), 0,
         IF(ISPICKVAL(Addendum_Type__c , &quot;Paused&quot;), 0,
           IF(ISPICKVAL(Addendum_Type__c , &quot;Cancellation&quot;),0,1
             )
           )
         )
      )
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add or Subtract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>