unpackaged/main/default/objects/Opportunity/fields/Add_Plan__c.field-meta.xml
<CustomField>
    <fullName>Add_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check this box if the client is adding another website subscription.</inlineHelpText>
    <label>Add Plan</label>
    <type>Checkbox</type>
</CustomField>