unpackaged/main/default/objects/Opportunity/fields/Addendum_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Execution_Date__c</fullName>
    <label>Addendum Effective Date</label>
    <type>Date</type>
</CustomField>