unpackaged/main/default/objects/Opportunity/fields/Addendum_Type__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Type__c</fullName>
    <label>Addendum Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
            <value>
                <fullName>Advanced Payment</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
                <isActive>false</isActive>
                <label>Expansion (one time)</label>
            </value>
            <value>
                <fullName>Pause</fullName>
                <isActive>false</isActive>
                <label>Pause</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>