unpackaged/main/default/objects/Opportunity/fields/Additional_Money__c.field-meta.xml
<CustomField>
    <fullName>Additional_Money__c</fullName>
    <label>Additional Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>