unpackaged/main/default/objects/Opportunity/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <label>AE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>