unpackaged/main/default/objects/Opportunity/fields/AE_Addendum__c.field-meta.xml
<CustomField>
    <fullName>AE_Addendum__c</fullName>
    <formula>Original_Opportunity__r.AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE-Addendum</label>
    <type>Text</type>
</CustomField>