unpackaged/main/default/objects/Opportunity/fields/AE_Split__c.field-meta.xml
<CustomField>
    <fullName>AE_Split__c</fullName>
    <label>AE Split%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>