unpackaged/main/default/objects/Opportunity/fields/AE_Split_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_Split_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE Split Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>