unpackaged/main/default/objects/Opportunity/fields/AED_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AED_End_Date__c</fullName>
    <formula>ADDMONTHS(Addendum_Execution_Date__c, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AED-End Date</label>
    <type>Date</type>
</CustomField>