unpackaged/main/default/objects/Opportunity/fields/Agent_Subdomains__c.field-meta.xml
<CustomField>
    <fullName>Agent_Subdomains__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Subdomains</label>
    <type>Checkbox</type>
</CustomField>