unpackaged/main/default/objects/Opportunity/fields/Agent_Subdomains_Product__c.field-meta.xml
<CustomField>
    <fullName>Agent_Subdomains_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Subdomains Product</label>
    <type>Checkbox</type>
</CustomField>