unpackaged/main/default/objects/Opportunity/fields/Agent_zipcode_luzury_index__c.field-meta.xml
<CustomField>
    <fullName>Agent_zipcode_luzury_index__c</fullName>
    <label>(MLS) Agent zipcode luzury index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>