unpackaged/main/default/objects/Opportunity/fields/Amount_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Products__c</fullName>
    <label>Amount of Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>