unpackaged/main/default/objects/Opportunity/fields/Amount_Paid_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Client__c</fullName>
    <formula>ROUND(Plan_Monthly_Subscription_Fee__c + Plan_Monthly_Marketing_Fee__c +  Add_on_Amount__c  + Ad_Spend__c + Ad_Management_Fee__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Monthly Fees+ Ad Spend + Ad Management Fee</inlineHelpText>
    <label>Amount Paid by Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>