unpackaged/main/default/objects/Opportunity/fields/Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee__c</fullName>
    <formula>ROUND(
IF(
ISPICKVAL( Subscription_Fee_Payment_Term__c , &quot;Annually&quot;),
(Monthly_Subscription_Fee__c+  Monthly_Marketing_Fee__c +  Ad_Spend__c + Ad_Management_Fee__c  )*12 +  One_Time_Fee__c,
NULL

),0)</formula>
    <label>Annual Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>