unpackaged/main/default/objects/Opportunity/fields/Annualized_Plan_Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Plan_Ad_Spend__c</fullName>
    <formula>Plan_Ad_Spend__c*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Plan Ad Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>