unpackaged/main/default/objects/Opportunity/fields/Annualized_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Total_Amount_Paid__c</fullName>
    <formula>Amount_Paid_by_Client__c*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Total Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>