unpackaged/main/default/objects/Opportunity/fields/Annualized_Total_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Total_Plan_Amount__c</fullName>
    <formula>Total_plan_amount__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Total Plan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>