unpackaged/main/default/objects/Opportunity/fields/Approved_for_Sales_Example__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Sales_Example__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Sales Example</label>
    <type>Checkbox</type>
</CustomField>