unpackaged/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>Total_Monthly_Fee__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>