unpackaged/main/default/objects/Opportunity/fields/Automated_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Automated_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is marked &quot;true&quot; when the addendum is created using the &quot;new addendum&quot; button.</description>
    <inlineHelpText>Indicates addendum was created with new addendum button</inlineHelpText>
    <label>Automated Workflow</label>
    <type>Checkbox</type>
</CustomField>