unpackaged/main/default/objects/Opportunity/fields/Average_Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Listing_Price__c</fullName>
    <label>Average Listing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>