unpackaged/main/default/objects/Opportunity/fields/Beta_user__c.field-meta.xml
<CustomField>
    <fullName>Beta_user__c</fullName>
    <label>In-App Onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>