unpackaged/main/default/objects/Opportunity/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <inlineHelpText>The date payment will begin.</inlineHelpText>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>