unpackaged/main/default/objects/Opportunity/fields/Brand_Identity__c.field-meta.xml
<CustomField>
    <fullName>Brand_Identity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Identity</label>
    <type>Checkbox</type>
</CustomField>