unpackaged/main/default/objects/Opportunity/fields/Brokerage_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Addendum__c</fullName>
    <label>Brokerage Addendum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>SIR</fullName>
            </value>
            <value>
                <fullName>Corcoran</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker</fullName>
            </value>
            <value>
                <fullName>ReMax</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>