unpackaged/main/default/objects/Opportunity/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a bundle has been added to this opportunity, the Bundle&#39;s Name shows here. Changing this manually does nothing right now.</inlineHelpText>
    <label>Bundle</label>
    <referenceTo>Bundle_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>