unpackaged/main/default/objects/Opportunity/fields/Bypass_validation_rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_validation_rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass validation rule</label>
    <type>Checkbox</type>
</CustomField>