unpackaged/main/default/objects/Opportunity/fields/Client_goals_for_website__c.field-meta.xml
<CustomField>
    <fullName>Client_goals_for_website__c</fullName>
    <label>Client goals for website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Business Card</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product (Dashboard to make changes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>