unpackaged/main/default/objects/Opportunity/fields/Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Notes__c</fullName>
    <label>Client Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>