unpackaged/main/default/objects/Opportunity/fields/Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile__c</fullName>
    <label>Client Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Value</fullName>
            </value>
            <value>
                <fullName>High Influence</fullName>
            </value>
            <value>
                <fullName>Tech Savvy</fullName>
            </value>
            <value>
                <fullName>Tech Adverse</fullName>
            </value>
            <value>
                <fullName>High Maintenance</fullName>
            </value>
            <value>
                <fullName>Easy Breezy</fullName>
            </value>
            <value>
                <fullName>Frugal</fullName>
            </value>
            <value>
                <fullName>Ready to Spend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>