unpackaged/main/default/objects/Opportunity/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Brokerage Plus</fullName>
            </value>
            <value>
                <fullName>Team Plus</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>