unpackaged/main/default/objects/Opportunity/fields/ClientNotes__c.field-meta.xml
<CustomField>
    <fullName>ClientNotes__c</fullName>
    <inlineHelpText>This field allows break lines, please use this client notes</inlineHelpText>
    <label>Client Notes2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>