unpackaged/main/default/objects/Opportunity/fields/Close_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Won_Date__c</fullName>
    <label>Close Won Date</label>
    <type>DateTime</type>
</CustomField>