unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Notes__c</fullName>
    <label>Closed Lost Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>