unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Primary_Reason__c</fullName>
    <label>Closed Lost Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Root_Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In a contract</fullName>
            </value>
            <value>
                <fullName>Other &quot;Now&#39;s not a good time&quot;</fullName>
            </value>
            <value>
                <fullName>Low transaction volume</fullName>
            </value>
            <value>
                <fullName>Retiring/scaling back</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Prospect&#39;s network</fullName>
            </value>
            <value>
                <fullName>Need CRM functionality</fullName>
            </value>
            <value>
                <fullName>Missing integration</fullName>
            </value>
            <value>
                <fullName>Missing search filters</fullName>
            </value>
            <value>
                <fullName>Missing development/new construction features</fullName>
            </value>
            <value>
                <fullName>Missing rental features</fullName>
            </value>
            <value>
                <fullName>Design/look and feel</fullName>
            </value>
            <value>
                <fullName>Market Conditions/Macro</fullName>
            </value>
            <value>
                <fullName>90 Days no movement</fullName>
                <isActive>false</isActive>
                <label>90 Days no movement</label>
            </value>
            <value>
                <fullName>Brokerage</fullName>
                <isActive>false</isActive>
                <label>Brokerage</label>
            </value>
            <value>
                <fullName>Budget</fullName>
                <isActive>false</isActive>
                <label>Budget</label>
            </value>
            <value>
                <fullName>CRM</fullName>
                <isActive>false</isActive>
                <label>CRM</label>
            </value>
            <value>
                <fullName>CRM Integration</fullName>
                <isActive>false</isActive>
                <label>CRM Integration</label>
            </value>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Cost is too High</fullName>
                <isActive>false</isActive>
                <label>Cost is too High</label>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
                <isActive>false</isActive>
                <label>Email Marketing</label>
            </value>
            <value>
                <fullName>Home Values</fullName>
                <isActive>false</isActive>
                <label>Home Values</label>
            </value>
            <value>
                <fullName>IDX feed</fullName>
                <isActive>false</isActive>
                <label>IDX feed</label>
            </value>
            <value>
                <fullName>Location</fullName>
                <isActive>false</isActive>
                <label>Location</label>
            </value>
            <value>
                <fullName>Now&#39;s not a good time</fullName>
                <isActive>false</isActive>
                <label>Now&#39;s not a good time</label>
            </value>
            <value>
                <fullName>Online Reviews</fullName>
                <isActive>false</isActive>
                <label>Online Reviews</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Overall</fullName>
                <isActive>false</isActive>
                <label>Overall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>