unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Root_Cause__c</fullName>
    <label>Closed Lost Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Bad Fit/ICP</fullName>
            </value>
            <value>
                <fullName>Missing/Incorrect DM</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Product Functionality</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
            <value>
                <fullName>Don&#39;t think it will work</fullName>
                <isActive>false</isActive>
                <label>Don&#39;t think it will work</label>
            </value>
            <value>
                <fullName>Features</fullName>
                <isActive>false</isActive>
                <label>Features</label>
            </value>
            <value>
                <fullName>Market Conditions/Macro</fullName>
                <isActive>false</isActive>
                <label>Market Conditions/Macro</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Partner/Spouse disagree</fullName>
                <isActive>false</isActive>
                <label>Partner/Spouse disagree</label>
            </value>
            <value>
                <fullName>Poorly Qualified</fullName>
                <isActive>false</isActive>
                <label>Poorly Qualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>