unpackaged/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Image</fullName>
            </value>
            <value>
                <fullName>Agenta</fullName>
            </value>
            <value>
                <fullName>Agent Fire</fullName>
            </value>
            <value>
                <fullName>TREM Group</fullName>
            </value>
            <value>
                <fullName>Sierra Interactive</fullName>
            </value>
            <value>
                <fullName>Inside Real Estate (KVcore, Boomtown)</fullName>
            </value>
            <value>
                <fullName>CINC</fullName>
            </value>
            <value>
                <fullName>Real Geeks</fullName>
            </value>
            <value>
                <fullName>Ylopo</fullName>
            </value>
            <value>
                <fullName>REW</fullName>
            </value>
            <value>
                <fullName>Union St Media</fullName>
            </value>
            <value>
                <fullName>Raliance</fullName>
            </value>
            <value>
                <fullName>Delta Media Group</fullName>
            </value>
            <value>
                <fullName>IDC Global</fullName>
            </value>
            <value>
                <fullName>WordPress (In-House)</fullName>
            </value>
            <value>
                <fullName>Placester</fullName>
            </value>
            <value>
                <fullName>LoneWolf</fullName>
            </value>
            <value>
                <fullName>HomeStack</fullName>
            </value>
            <value>
                <fullName>Zenlist</fullName>
            </value>
            <value>
                <fullName>RealScout</fullName>
            </value>
            <value>
                <fullName>Compass Collections</fullName>
            </value>
            <value>
                <fullName>Rechat</fullName>
            </value>
            <value>
                <fullName>Lofty</fullName>
            </value>
            <value>
                <fullName>Boomtown</fullName>
                <isActive>false</isActive>
                <label>Boomtown</label>
            </value>
            <value>
                <fullName>Commissions Inc</fullName>
                <isActive>false</isActive>
                <label>Commissions Inc</label>
            </value>
            <value>
                <fullName>Curaytor</fullName>
                <isActive>false</isActive>
                <label>Curaytor</label>
            </value>
            <value>
                <fullName>No Competitor</fullName>
                <isActive>false</isActive>
                <label>No Competitor</label>
            </value>
            <value>
                <fullName>Other (Please Note)</fullName>
                <isActive>false</isActive>
                <label>Other (Please Note)</label>
            </value>
            <value>
                <fullName>Real Estate Webmasters</fullName>
                <isActive>false</isActive>
                <label>Real Estate Webmasters</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>