unpackaged/main/default/objects/Opportunity/fields/Confirm_new_domain_for_SEO_Migration__c.field-meta.xml
<CustomField>
    <fullName>Confirm_new_domain_for_SEO_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm new domain for SEO Migration</label>
    <type>Checkbox</type>
</CustomField>