unpackaged/main/default/objects/Opportunity/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <inlineHelpText>For New Sales, it&#39;s only required if you sent the contract in Hubspot</inlineHelpText>
    <label>Subscription Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>