unpackaged/main/default/objects/Opportunity/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <label>Subscription Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>