unpackaged/main/default/objects/Opportunity/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Subscription Term (Months)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>