unpackaged/main/default/objects/Opportunity/fields/CRM_if_yes_please_specify__c.field-meta.xml
<CustomField>
    <fullName>CRM_if_yes_please_specify__c</fullName>
    <label>CRM? (if yes, please specify)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>