unpackaged/main/default/objects/Opportunity/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <label>CSM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>