unpackaged/main/default/objects/Opportunity/fields/Current_Ad_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Current_Ad_Management_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Ad Management Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>